--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -171,14 +171,13 @@ To create a household (i.e. small scale) , cost-effective water system with an e
 <u>Overall view of designs</u>
 
 
-<img src="individual_labelled.jpg" alt="labelled system" class="center">
+<img src="individual_labelled.jpg" alt="labelled system" style="width:80%" class="center">
 
-<img src="system_labelled.jpg" alt="labelled system" class="center">
-
+<img src="system_labelled.jpg" alt="labelled system" style="width:80%" class="center">
 
 <b>Video</b>
 <center>
-  <video width ="600" height="1000" controls >
+  <video width ="300" height="600" controls >
     <source src="../FinalProject/final_project.mp4" type="video/mp4" style="float:center"/>
   </video>
 </center>
@@ -200,7 +199,7 @@ The filter is modelled of this 5-stage filter, with the main difference being re
 
 <u>Water Sensor</u>
 
-The Gilkfun capacitive soil moisture was used in place of capacitive sensors due to less variability and therefore more reliability in water level readings. Additionally the pre-purchased sensor is corrosion resistant allowing for more sustainability. This sensor is also highly cost effective at under 10 dollars.
+The [Gilkfun capacitive soil moisture](https://www.amazon.com/Gikfun-Capacitive-Corrosion-Resistant-Detection/dp/B07H3P1NRM) was used in place of capacitive sensors due to less variability and therefore more reliability in water level readings. Additionally the pre-purchased sensor is corrosion resistant allowing for more sustainability. This sensor is also highly cost effective at under 10 dollars.
 
 
 <img src="sensor.jpeg" alt="Sensor" style="width:40%"  class="center">
@@ -212,7 +211,7 @@ The Bluetooth app was modeled using MIT App inventor which follows block-based c
 2)  Medium level
 3)  High level
 
-<img src="bluetooth.jpeg" alt="Bluetooth" style="width:60%"  class="center">
+<img src="bluetooth.jpeg" alt="Bluetooth" style="width:30%"  class="center">
 
 <u> Fittings / stand / electrical components </u>
 
