final page update

--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -186,7 +186,7 @@ To create a household (i.e. small scale) , cost-effective water system with an e
 
 <u>Pump</u>
 
-The “Jinhe motor submersible Bilge pump” used for fish-tanks was used in place of the dc pump  I constructed that did not work. This pump takes 12 V DC and 0.36 amps and was sufficiently powerful enough for the scope of this project. The pump takes roughly 1 cm diameter tubing. In in order to connect the pump to the PVC (with the tubing placed within) a 3d printed connector was designed. This pump is highly affordable at only 10 dollars.
+The [Jinhe motor submersible Bilge pump](https://skycraftsurplus.com/products/submersiblebilge-pump-12-volt-dc-350-gph.html) used for fish-tanks was used in place of the dc pump  I constructed that did not work. This pump takes 12 V DC and 0.36 amps and was sufficiently powerful enough for the scope of this project. The pump takes roughly 1 cm diameter tubing. In in order to connect the pump to the PVC (with the tubing placed within) a 3d printed connector was designed. This pump is highly affordable at only 10 dollars.
 
 
 <u>Filter</u>
