--- a/12/index.html
+++ b/12/index.html
@@ -132,9 +132,9 @@ The final STL file can be found on the [Final Project Page](../FinalProject/inde
 
 Originally, I had planned to directly incorporate mesh fitting into my design, however after discussing with Nathan I realized that the 3D printer was not optimized for this sort of design (shown below). I decided to use stainless stell metal mesh filter with 0.18mm holes. This also went along nicely with my underlying modularity goals as it would be easy and cheap to replace. I decided, therefore, that the best way to attach this metal meshes would be a press fit methodology with an additional printed ring to squeeze on top of the mesh. After running a few test prints and trial and error, I managed to get the right weighting, diameter and thickness to hold the mesh in place.
 
-<img src="mesh_3D.jpg" alt="3D mesh" style="width:90%"  class="center">
+<img src="mesh_3D.png" alt="3D mesh" style="width:50%"  class="center">
 
-<img src="mesh.jpg" alt="Actual mesh" style="width:100%"  class="center">
+<img src="mesh.jpg" alt="Actual mesh" style="width:50%"  class="center">
 
 
 <u> Filter components </u>
@@ -149,7 +149,7 @@ After putting together my compartmentalized filter and testing it, I realized th
 
 Given that this water system is meant to be for small scale use, I decided to build a start to end flow of water. This meant that I wanted to show the process from the tank all the way to the cup. Because of this, I thought that by designing the filter so that it would act as an add-on component to a cup stand would help make the design more human. The CAD drawings for the design can be found on the Final Page.
 
-<img src="cup_print.jpg" alt="3d print" style="width:100%"  class="center">
+<img src="cup_print.jpg" alt="3d print" style="width:50%"  class="center">
 
 <u> Input electronic devices </u>
 
